Update base style files

--- a/style/index.sass
+++ b/style/index.sass
@@ -1,11 +1,4 @@
-html
-  box-sizing: border-box
+@import reset
+@import theme
 
-*
-  box-sizing: inherit
-
-html, body
-  margin: 0
-  padding: 0
-  background: #000
-  color: #ccc
++theme(#000, #ccc, #d75893)
